examples/test/testpolicy8693.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8693
  namespace: namespace68
spec:
  podSelector:
    matchLabels:
      key29: value5
      key48: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value28
      podSelector:
        matchLabels:
          key26: value29
          key14: value11
          key38: value44
